# djangoconus22-tutorial

./: README.md  docker-compose.yml  pyproject.toml
tutorial/: settings.py
