[tool.poetry]
name = "djangoconus22-tutorial"
version = "0.1.0"
description = "This Repo contains the reference for the tutorial at DjangoConUS 22"
authors = ["Kuldeep Pisda <22424149+kdpisda@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "djangoconus22_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
psycopg2 = "^2.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
